SOLID implementeret i Dawa, next step er for UrlHelper to follow the same principles.